[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Sondre Halvorsen <sondre.hal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
aiofiles = "^0.4.0"
gunicorn = "^20.0.4"
rethinkdb = "^2.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
